--- a/imports/ui/pages/class/class.html
+++ b/imports/ui/pages/class/class.html
@@ -1,17 +1,23 @@
 <template name="class">
+    <div class="class-container p-4">
     <h1>
         {{#onLoaded loaded=loadComplete}}{{i18n "pages.class.title"}}{{/onLoaded}}
         {{title}}
     </h1>
 
+
     {{#onLoaded loaded=loadComplete}}
         <select class="form-control border-{{color}} text-{{color}}"
                 id="dimension-select">
-            <option value="">{{i18n "form.selectName" name=(i18n "dimensions.title")}}</option>
+            <option value="">{{i18n "form.selectName" name=(i18n "dimension.title")}}</option>
             {{#each dimension in dimensions}}
                 <option value="{{dimension._id}}">{{dimension.title}}</option>
             {{/each}}
         </select>
+
+        {{#if noUsers}}
+            <div class="alert alert-warning">{{i18n "pages.cass.noUsers"}}</div>
+        {{/if}}
     {{/onLoaded}}
 
     {{#if dimensionDoc}}
@@ -64,26 +70,90 @@
                 {{/with}}
             {{/unless}}
         {{/onLoaded}}
+
+        {{#onLoaded loaded=competencyCategories}}
+            <div class="row">
+           {{#each category in competencyCategories}}
+                <div class="col col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-header">
+                            {{category.name}}
+                        </div>
+
+                        <div class="card-body d-flex justify-content-center font-weight-bold">
+                            <div class="mx-1">
+                                <h4 class="d-block text-center">&#8960;</h4>
+                                {{i18n "alphaLevel.title"}} {{category.alphaAverage}}
+                            </div>
+
+                            <div class="mx-1">
+                                <h4 class="d-block text-center">{{category.entries.length}}</h4>
+                                {{i18n "competency.competencies"}}
+                            </div>
+
+                            <div class="mx-1">
+                                <h4 class="d-block text-center">{{category.users}}</h4>
+                                {{i18n "users.title"}}
+                            </div>
+                        </div>
+
+                        <ul class="list-group">
+                            {{#each competency in category.entries}}
+                                <li class="list-group-item clickable competency-entry"
+                                    type="button"
+                                    data-category="{{category.name}}"
+                                    data-competency="{{competency._id}}"
+                                    data-toggle="collapse" data-target="#collapse-{{category.name}}-{{@index}}">
+                                    <div class="d-block text-center">
+                                        <span class="badge badge-secondary">
+                                            {{i18n "alphaLevel.title"}}
+                                            {{competency.level}}
+                                        </span>
+                                    </div>
+                                    <div class="d-block text-center">
+                                        {{competency.shortCode}}
+                                        {{competency.description}}
+                                    </div>
+                                    <div class="d-flex align-items-center">
+                                        <div class="progress flex-fill"
+                                             style="height: 0.5rem;">
+                                            <div class="progress-bar bg-success"
+                                                 role="progressbar"
+                                                 style="width: {{competency.average}}%"
+                                                 aria-valuenow="{{competency.average}}"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100"></div>
+                                        </div>
+                                        <div class="ml-2 caret-icon {{#if openCard category.name competency._id}}caret-open{{/if}}">&#9947;</div>
+                                    </div>
+
+                                    {{! collapsible users }}
+
+                                    <div class="collapse px-5" id="collapse-{{category.name}}-{{@index}}">
+                                        <hr>
+                                        {{#each user in competency.users}}
+                                            <small class="d-block text-center">
+                                                {{user.name}}
+                                            </small>
+                                            <div class="progress flex-fill"
+                                                 style="height: 0.25rem;">
+                                                <div class="progress-bar bg-success"
+                                                     role="progressbar"
+                                                     style="width: {{user.perc}}%"
+                                                     aria-valuenow="{{user.perc}}"
+                                                     aria-valuemin="0"
+                                                     aria-valuemax="100"></div>
+                                            </div>
+                                        {{/each}}
+                                    </div>
+                                </li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                </div>
+           {{/each}}
+            </div>
+        {{/onLoaded}}
     {{/if}}
-</template>
-
-<template name="competencyCategoryForCourse">
-    <div>{{i18n "pages.class.compCategory"}}: {{this.competencyCategory}}</div>
-    <div>{{i18n "pages.class.competencies"}}: {{this.compCount}}</div>
-    <div>{{i18n "common.progress"}}: {{this.progress}}</div>
-    <div>{{i18n "common.users"}}: {{this.userCount}}</div>
-
-    {{#each competency in this.competencies}}
-        {{> competencyForCourse competency}}
-    {{/each}}
-</template>
-
-<template name="competencyForCourse">
-    <div>{{i18n "alphaLevel.title"}}: {{this.alphaLevel}}</div>
-    <div>{{i18n "common.description"}}: {{this.description}}</div>
-    <div>{{i18n "common.progress"}}: {{this.progress}}</div>
-    {{#each entry in this.users}}
-        <div>{{i18n "common.user"}}: {{entry.name}}</div>
-        <div>{{i18n "common.progress"}}: {{entry.progress}}</div>
-    {{/each}}
+    </div>
 </template>
